--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="container-fluid p-5 sec-odd" id="sobre-mi">
             <div class="row flex-row-reverse">
                 <div class="col-12 col-md-6 text-center">
-                    <img src="/img/developer.png" alt="Desarrollador Web" class="img-fluid" id="img-dev">
+                    <img src="img/developer.png" alt="Desarrollador Web" class="img-fluid" id="img-dev">
                 </div>
                 <div class="col-12 col-md-6 text-center align-self-center">
                     <h3>Programador ABAP / Futuro Desarrollador Web</h3>
@@ -85,22 +85,22 @@
                 </div>
                 <div class="col-12 text-center">
                     <div class="row d-flex justify-content-around">
-                        <div class="col div-skill"><img src="/img/sap-abap-sm.png" alt="Logo de SAP/ABAP">
+                        <div class="col div-skill"><img src="img/sap-abap-sm.png" alt="Logo de SAP/ABAP">
                             <p>ABAP</p>
                         </div>
-                        <div class="col div-skill"><img src="/img/HTML.png" alt="Logo de HTML">
+                        <div class="col div-skill"><img src="img/HTML.png" alt="Logo de HTML">
                             <p>HTML</p>
                         </div>
-                        <div class="col div-skill"><img src="/img/CSS.png" alt="Logo de CSS">
+                        <div class="col div-skill"><img src="img/CSS.png" alt="Logo de CSS">
                             <p>CSS</p>
                         </div>
-                        <div class="col div-skill"><img src="/img/Sass.png" alt="Logo de Sass">
+                        <div class="col div-skill"><img src="img/Sass.png" alt="Logo de Sass">
                             <p>Sass</p>
                         </div>
-                        <div class="col div-skill"><img src="/img/JavaScript.png" alt="Logo de JavaScript">
+                        <div class="col div-skill"><img src="img/JavaScript.png" alt="Logo de JavaScript">
                             <p>JavaScript</p>
                         </div>
-                        <div class="col div-skill"><img src="/img/ReactJS.png" alt="Logo de React JS">
+                        <div class="col div-skill"><img src="img/ReactJS.png" alt="Logo de React JS">
                             <p>React JS</p>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                 <div class="col-12 text-center">
                     <div class="container-fluid d-flex justify-content-around flex-wrap">
                         <div class="card m-3" style="width: 18rem;">
-                            <img src="/img/lar-sm.png" class="card-img-top" alt="Sitio web de Fábrica de Arandelas">
+                            <img src="img/lar-sm.png" class="card-img-top" alt="Sitio web de Fábrica de Arandelas">
                             <div class="card-body">
                                 <p class="card-text">Sitio web real para una empresa dedicada a la fabricación de
                                     arandelas.</p>
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="card m-3" style="width: 18rem;">
-                            <img src="/img/pizza-art-sm.png" class="card-img-top" alt="Sitio web de Venta de Pizza">
+                            <img src="img/pizza-art-sm.png" class="card-img-top" alt="Sitio web de Venta de Pizza">
                             <div class="card-body">
                                 <p class="card-text">Proyecto final para curso de JavaScript. Sitio que simula vender
                                     pizzas y empanadas con un estilo muy particular.</p>
@@ -142,7 +142,7 @@
                         </div>
 
                         <div class="card m-3" style="width: 18rem;">
-                            <img src="/img/anitta-sm.png" class="card-img-top" alt="Sitio web de Turismo">
+                            <img src="img/anitta-sm.png" class="card-img-top" alt="Sitio web de Turismo">
                             <div class="card-body">
                                 <p class="card-text">Proyecto final para curso de HTML & CSS. Sitio simulado de empresa
                                     de turismo en República Dominicana.</p>
@@ -152,7 +152,7 @@
                         </div>
 
                         <div class="card m-3" style="width: 18rem;">
-                            <img src="/img/caro-sm.png" class="card-img-top"
+                            <img src="img/caro-sm.png" class="card-img-top"
                                 alt="Sitio web de Compras de Vestimenta y Articulos">
                             <div class="card-body">
                                 <p class="card-text">Proyecto final para curso de ReactJS. Web para venta de
