--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Claudio Masa</title>
 </head>
 
 <body>
     <!-- NAV FUERA DEL HEADER PARA QUE FUNCIONE CORRECTAMENTE EL STICKY -->
-    <div class="container-fluid sticky-top">
-        <nav class="navbar navbar-expand-md bg-body-tertiary">
-            <div class="container-fluid">
-                <!-- <a class="navbar-brand" href="#">Claudio Masa</a> -->
+    <div class="container-fluid sticky-top pt-2">
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid justify-content-center">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon">menu</span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-md-0">
@@ -30,10 +30,10 @@
                             <a class="nav-link" href="#sobre-mi">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#proyectos">Proyectos</a>
+                            <a class="nav-link" href="#habilidades">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#habilidades">Habilidades</a>
+                            <a class="nav-link" href="#proyectos">Proyectos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contacto">Contacto</a>
@@ -46,61 +46,58 @@
 
     <main>
         <!-- Inicio/Titulo -->
-        <section class="container-fluid sec-title p-5 sec-even" id="home">
+        <section class="container-fluid sec-title p-5" id="home">
             <div class="row">
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-lg-5">
                     <h1><span>Claudio</span><br><span>Masa</span></h1>
                 </div>
-                <div class="col-12 col-lg-9 text-lg-end ps-lg-5 align-self-center">
-                    <h2 class="mt-4 mt-lg-0">Desarrollador</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat maiores delectus non, esse neque
-                        voluptatum commodi porro facere sit obcaecati.</p>
+                <div class="col-12 col-lg-7 text-lg-end ps-lg-5 align-self-center">
+                    <h2 class="mt-4 mt-lg-0">Service & Tech</h2>
+                    <p>Potencie su negocio con soluciones digitales de última generación, como websites, aplicaciones
+                        web y marketing digital, con un enfoque en sus necesidades específicas, incluido el diseño y
+                        desarrollo web.</p>
                 </div>
             </div>
         </section>
 
         <!-- Sobre Mi -->
-        <section class="container-fluid p-5 sec-odd" id="sobre-mi">
+        <section class="container-fluid p-5" id="sobre-mi">
             <div class="row flex-row-reverse">
                 <div class="col-12 col-md-6 text-center">
                     <img src="img/developer.png" alt="Desarrollador Web" class="img-fluid" id="img-dev">
                 </div>
                 <div class="col-12 col-md-6 text-center align-self-center">
-                    <h3>Programador ABAP / Futuro Desarrollador Web</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi blanditiis ipsa id esse, sequi
-                        quidem unde temporibus. At excepturi quaerat neque eos laborum autem. Ea iste labore error
-                        incidunt beatae.</p>
+                    <h3>Programador ABAP / Futuro Desarrollador Fullstack</h3>
+                    <p>Desarrollador ABAP desde hace más de 15 años, adquiriendo conocimientos y práctica para
+                        convertirme en un profesional Fullstack.</p>
                 </div>
             </div>
         </section>
 
         <!-- Habilidades -->
-        <section class="container-fluid p-5 sec-even" id="habilidades">
+        <section class="container-fluid p-5" id="habilidades">
             <div class="row">
-                <div class="col-12 text-center align-self-center">
+                <div class="col-12 mt-5 text-center align-self-center">
                     <h3>Conocimientos y habilidades</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi blanditiis ipsa id esse, sequi
-                        quidem unde temporibus. At excepturi quaerat neque eos laborum autem. Ea iste labore error
-                        incidunt beatae.</p>
                 </div>
                 <div class="col-12 text-center">
                     <div class="row d-flex justify-content-around">
-                        <div class="col div-skill"><img src="img/sap-abap-sm.png" alt="Logo de SAP/ABAP">
+                        <div class="col mt-3 div-skill"><img src="img/sap-abap-sm.png" alt="Logo de SAP/ABAP">
                             <p>ABAP</p>
                         </div>
-                        <div class="col div-skill"><img src="img/HTML.png" alt="Logo de HTML">
+                        <div class="col mt-3 div-skill"><img src="img/HTML.png" alt="Logo de HTML">
                             <p>HTML</p>
                         </div>
-                        <div class="col div-skill"><img src="img/CSS.png" alt="Logo de CSS">
+                        <div class="col mt-3 div-skill"><img src="img/CSS.png" alt="Logo de CSS">
                             <p>CSS</p>
                         </div>
-                        <div class="col div-skill"><img src="img/Sass.png" alt="Logo de Sass">
+                        <div class="col mt-3 div-skill"><img src="img/Sass.png" alt="Logo de Sass">
                             <p>Sass</p>
                         </div>
-                        <div class="col div-skill"><img src="img/JavaScript.png" alt="Logo de JavaScript">
+                        <div class="col mt-3 div-skill"><img src="img/JavaScript.png" alt="Logo de JavaScript">
                             <p>JavaScript</p>
                         </div>
-                        <div class="col div-skill"><img src="img/ReactJS.png" alt="Logo de React JS">
+                        <div class="col mt-3 div-skill"><img src="img/ReactJS.png" alt="Logo de React JS">
                             <p>React JS</p>
                         </div>
                     </div>
@@ -109,13 +106,10 @@
         </section>
 
         <!-- Proyectos -->
-        <section class="container-fluid p-5 sec-odd" id="proyectos">
+        <section class="container-fluid p-5" id="proyectos">
             <div class="row">
-                <div class="col-12 text-center align-self-center">
+                <div class="col-12 mt-5 text-center align-self-center">
                     <h3>Proyectos</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi blanditiis ipsa id esse, sequi
-                        quidem unde temporibus. At excepturi quaerat neque eos laborum autem. Ea iste labore error
-                        incidunt beatae.</p>
                 </div>
 
                 <div class="col-12 text-center">
@@ -125,7 +119,8 @@
                             <div class="card-body">
                                 <p class="card-text">Sitio web real para una empresa dedicada a la fabricación de
                                     arandelas.</p>
-                                <a href="https://arandelasrosa.com.ar" target="_blank" class="btn btn-primary">Luis A.
+                                <a href="https://arandelasrosa.com.ar" target="_blank"
+                                    class="btn btn-outline-primary">Luis A.
                                     Rosa
                                     e Hijo</a>
                             </div>
@@ -137,7 +132,7 @@
                                 <p class="card-text">Proyecto final para curso de JavaScript. Sitio que simula vender
                                     pizzas y empanadas con un estilo muy particular.</p>
                                 <a href="https://pizza-art-lovat.vercel.app/" target="_blank"
-                                    class="btn btn-primary">Pizza Art!</a>
+                                    class="btn btn-outline-primary">Pizza Art!</a>
                             </div>
                         </div>
 
@@ -147,7 +142,7 @@
                                 <p class="card-text">Proyecto final para curso de HTML & CSS. Sitio simulado de empresa
                                     de turismo en República Dominicana.</p>
                                 <a href="https://anitta-excursiones.vercel.app/" target="_blank"
-                                    class="btn btn-primary">Anitta Excursiones</a>
+                                    class="btn btn-outline-primary">Anitta Excursiones</a>
                             </div>
                         </div>
 
@@ -158,7 +153,7 @@
                                 <p class="card-text">Proyecto final para curso de ReactJS. Web para venta de
                                     Indumentaria y Accesorios. (No Responsive - Sólo versión desktop.)</p>
                                 <a href="https://cm-indumentaria.vercel.app/" target="_blank"
-                                    class="btn btn-primary">Indumentaria Caro Martinez</a>
+                                    class="btn btn-outline-primary">Indumentaria Caro Martinez</a>
                             </div>
                         </div>
                     </div>
@@ -167,10 +162,33 @@
             </div>
         </section>
 
+        <!-- Contacto -->
+        <section class="container-fluid text-center p-5" id="contacto">
+            <div class="row justify-content-around">
+                <div class="col-12 mb-3">
+                    <h3>Contacto</h3>
+                </div>
+                <div class="container-fluid justify-content-evenly d-flex flex-wrap">
+                    <div class="mx-3" style="width: 250px;">
+                        <a href="https://www.linkedin.com/in/claudio-masa" target="_blank">
+                            <img src="img/linkedin.svg" alt="" width="50px" height="50px">
+                        </a>
+                        <p>in/claudio-masa</p>
+                    </div>
+                    <div class="mx-3" style="width: 250px;">
+                        <a href="mailto:claudio.masa.dev@gmail.com">
+                            <img src="img/email.svg" alt="" width="50px" height="50px">
+                        </a>
+                        <p>claudio.masa.dev@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
     <footer>
-
+        <div class="container-fluid text-center mt-4">
+            <p>© 2024. Construído y diseñado por mi.</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
