Neon Style - Correcciones Icono & Titulo

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Hoja de Estilos-->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Claudio Masa</title>
+    <title>Claudio Masa - Portfolio</title>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/img/developer-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/developer-icon.png" type="image/x-icon">
 </head>
 
 <body>
